Bug 268484 - applet issues "low signal"-notifications for inactive connections
Summary: applet issues "low signal"-notifications for inactive connections
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-14 17:56 UTC by S. Burmeister
Modified: 2011-03-14 22:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2011-03-14 17:56:03 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

If I'm connected to network x and the applet notifies me that it has a low signal, that's fine. But it is not necessary to notify that an available but not active network has a low signal.

Reproducible: Always
Comment 1 Lamarque V. Souza 2011-03-14 22:45:43 UTC
Git commit fb3540d897fd174782e0ebe5d991f53481466988 by Lamarque V. Souza.
Committed on 14/03/2011 at 22:44.
Pushed by lvsouza into branch 'master'.

Do not send "low signal" notification if connection is not activated.

BUG: 268484

M  +4    -1    libs/service/notificationmanager.cpp     

http://commits.kde.org/networkmanagement/fb3540d897fd174782e0ebe5d991f53481466988