Do not send "low signal" notification if connection is not activated.

BUG: 268484